// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox allows numbers as value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 1rem;
}

<div
  class="c0"
>
  <label
    for="the-group-name_1"
  >
    <span
      class="alignFlexStart c1"
    >
      <span
        class="fakeCheckbox unchecked"
        data-testid="fake-input"
      >
        <input
          aria-invalid="false"
          class="hiddenInput"
          id="the-group-name_1"
          name="the-group-name"
          type="checkbox"
          value="1"
        />
      </span>
      <div
        class="flexOne c0"
      >
        <span
          class="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
        >
          A label
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Checkbox renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 1rem;
}

<div
  class="c0"
>
  <label
    for="the-group-name_the-value"
  >
    <span
      class="alignFlexStart c1"
    >
      <span
        class="fakeCheckbox unchecked"
        data-testid="fake-input"
      >
        <input
          aria-invalid="false"
          class="hiddenInput"
          id="the-group-name_the-value"
          name="the-group-name"
          type="checkbox"
          value="the-value"
        />
      </span>
      <div
        class="flexOne c0"
      >
        <span
          class="TDS_Typography-modules__medium___1DC1g TDS_Typography-modules__wordBreak___3dmWU TDS_Typography-modules__mediumFont___2ULml TDS_Typography-modules__color___1Jt_W"
        >
          A label
        </span>
      </div>
    </span>
  </label>
</div>
`;
